--- a/prospectus/prospectus.tex
+++ b/prospectus/prospectus.tex
@@ -4,7 +4,7 @@
 
 
 \begin{document}
-\[\title{Access path selection in a relational database management system~\cite{selinger1979access}.}
+\title{Access path selection in a relational database management system~\cite{selinger1979access}.}
 
 %\author{Selinger et al.}
 
@@ -134,5 +134,5 @@ Simply developing a set of cost models and search heuristics for query plans sho
 
 \bibliographystyle{abbrv}
 \bibliography{prospectus}
-\]
+
 \end{document}
