--- a/prospectus/prospectus.bib
+++ b/prospectus/prospectus.bib
@@ -1,69 +1,72 @@
-@inproceedings{selinger1979access,
-  title={Access path selection in a relational database management system},
-  author={Selinger, P Griffiths and Astrahan, Morton M and Chamberlin, Donald D and Lorie, Raymond A and Price, Thomas G},
-  booktitle={Proceedings of the 1979 ACM SIGMOD international conference on Management of data},
-  pages={23--34},
-  year={1979},
+@article{elmagarmid2007duplicate,
+  title={Duplicate record detection: A survey},
+  author={Elmagarmid, Ahmed K and Ipeirotis, Panagiotis G and Verykios, Vassilios S},
+  journal={IEEE Transactions on knowledge and data engineering},
+  volume={19},
+  number={1},
+  pages={1--16},
+  year={2007},
+  publisher={IEEE}
+}
+
+@article{kopcke2010evaluation,
+  title={Evaluation of entity resolution approaches on real-world match problems},
+  author={K{\"o}pcke, Hanna and Thor, Andreas and Rahm, Erhard},
+  journal={Proceedings of the VLDB Endowment},
+  volume={3},
+  number={1-2},
+  pages={484--493},
+  year={2010},
+  publisher={VLDB Endowment}
+}
+
+@article{wang2012crowder,
+  title={Crowder: Crowdsourcing entity resolution},
+  author={Wang, Jiannan and Kraska, Tim and Franklin, Michael J and Feng, Jianhua},
+  journal={Proceedings of the VLDB Endowment},
+  volume={5},
+  number={11},
+  pages={1483--1494},
+  year={2012},
+  publisher={VLDB Endowment}
+}
+
+@inproceedings{gokhale2014corleone,
+  title={Corleone: hands-off crowdsourcing for entity matching},
+  author={Gokhale, Chaitanya and Das, Sanjib and Doan, AnHai and Naughton, Jeffrey F and Rampalli, Narasimhan and Shavlik, Jude and Zhu, Xiaojin},
+  booktitle={Proceedings of the 2014 ACM SIGMOD international conference on Management of data},
+  pages={601--612},
+  year={2014},
   organization={ACM}
 }
 
-@article{codd1970relational,
-  title={A relational model of data for large shared data banks},
-  author={Codd, Edgar F},
-  journal={Communications of the ACM},
-  volume={13},
-  number={6},
-  pages={377--387},
-  year={1970},
-  publisher={ACM}
+@article{ebraheem2017deeper,
+  title={DeepER--Deep Entity Resolution},
+  author={Ebraheem, Muhammad and Thirumuruganathan, Saravanan and Joty, Shafiq and Ouzzani, Mourad and Tang, Nan},
+  journal={arXiv preprint arXiv:1710.00597},
+  year={2017}
 }
 
-@article{astrahan1976system,
-  title={System R: relational approach to database management},
-  author={Astrahan, Morton M. and Blasgen, Mike W. and Chamberlin, Donald D. and Eswaran, Kapali P. and Gray, Jim N and Griffiths, Patricia P. and King, W Frank and Lorie, Raymond A. and McJones, Paul R. and Mehl, James W. and others},
-  journal={ACM Transactions on Database Systems (TODS)},
-  volume={1},
-  number={2},
-  pages={97--137},
-  year={1976},
-  publisher={ACM}
+@article{yi2017method,
+  title={A Method for Entity Resolution in High Dimensional Data Using Ensemble Classifiers},
+  author={Yi, Liu and Xing-chun, Diao and Jian-jun, Cao and Xing, Zhou and Yu-ling, Shang},
+  journal={Mathematical Problems in Engineering},
+  volume={2017},
+  year={2017},
+  publisher={Hindawi}
 }
 
-@incollection{bayer2002organization,
-  title={Organization and maintenance of large ordered indexes},
-  author={Bayer, Rudolf and McCreight, Edward},
-  year={1972},
+@article{varma2017relic,
+  title={ReLiC: Entity Profiling by using Random Forest and Trustworthiness of a Source-Technical Report},
+  author={Varma, Shubham and Sameer, Neyshith and Chowdary, C Ravindranath},
+  journal={arXiv preprint arXiv:1702.00921},
+  year={2017}
 }
 
-@article{lorie1979access,
-  title={An access specification language for a relational data base system},
-  author={Lorie, Raymond A and Nilsson, Jorgen F},
-  journal={IBM journal of Research and Development},
-  volume={23},
-  number={3},
-  pages={286--298},
-  year={1979},
-  publisher={IBM}
-}
-
-@article{stonebraker1976design,
-  title={The design and implementation of INGRES},
-  author={Stonebraker, Michael and Held, Gerald and Wong, Eugene and Kreps, Peter},
-  journal={ACM Transactions on Database Systems (TODS)},
-  volume={1},
-  number={3},
-  pages={189--222},
-  year={1976},
-  publisher={ACM}
-}
-
-@article{taylor1976codasyl,
-  title={CODASYL data-base management systems},
-  author={Taylor, Robert W and Frank, Randall L},
-  journal={ACM Computing Surveys (CSUR)},
-  volume={8},
-  number={1},
-  pages={67--103},
-  year={1976},
-  publisher={ACM}
+@inproceedings{schroff2015facenet,
+  title={Facenet: A unified embedding for face recognition and clustering},
+  author={Schroff, Florian and Kalenichenko, Dmitry and Philbin, James},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={815--823},
+  year={2015}
 }
