update bib file

--- a/prospectus/prospectus.bib
+++ b/prospectus/prospectus.bib
@@ -70,3 +70,21 @@
   pages={815--823},
   year={2015}
 }
+
+@article{kopcke2010evaluation,
+  title={Evaluation of entity resolution approaches on real-world match problems},
+  author={K{\"o}pcke, Hanna and Thor, Andreas and Rahm, Erhard},
+  journal={Proceedings of the VLDB Endowment},
+  volume={3},
+  number={1-2},
+  pages={484--493},
+  year={2010},
+  publisher={VLDB Endowment}
+}
+
+@article{trigueros2017enhancing,
+  title={Enhancing Convolutional Neural Networks for Face Recognition with Occlusion Maps and Batch Triplet Loss},
+  author={Trigueros, Daniel S{\'a}ez and Meng, Li and Hartnett, Margaret},
+  journal={arXiv preprint arXiv:1707.07923},
+  year={2017}
+}
