--- a/prospectus/prospectus.tex
+++ b/prospectus/prospectus.tex
@@ -15,9 +15,9 @@
 
 Entity resolution refers to the task of identifying records in a dataset that refer to the same entity across different data sources. It is one of the most crucial stages in data integration, and researchers have spent the past few decades studying various methods in order to make this process both accurate and efficient.
 
-The most fundamental technique used in entity resolution is to calculate similarity metrics between a pair of records and setting a threshold to decide whether the pair is a match~\cite{elmagarmid2007duplicate}. Additional efforts have been built upon this method, including machine-learning mechanisms such as random forest~\cite{varma2017relic} and decision tree ensembles~\cite{yi2017method}, as well as crowdsourcing~\cite{gokhale2014corleone,wang2012crowder}. Some of the ongoing research on the subject utilizes deep learning algorithms~\cite{ebraheem2017deeper} and introduces tree-based adversarial generation [Euegen Wu proposal???]. However, these models typically cannot achieve 100\% accuracy and make incorrect predictions on some records [Euegen Wu proposal???]. 
+The most fundamental technique used in entity resolution is to manually design and calculate similarity metrics between a pair of records and setting a threshold to decide whether the pair is a match~\cite{elmagarmid2007duplicate}. Additional efforts have been built upon this method, including machine-learning algorithms such as decision tree ensembles~\cite{varma2017relic, yi2017method}, as well as crowdsourcing~\cite{gokhale2014corleone,wang2012crowder}. Some of the most recent research efforts on the subject explore techniques such as deep learning algorithms~\cite{ebraheem2017deeper} and tree-based adversarial generation. While these models can achieve near-perfect accuracy on datasets that are well structured and have little noise, they struggle to perform well with datasets that are noisy and have unstructured attributes~\cite{ebraheem2017deeper}.
 
-In recent years, researchers have made significant progress in Face Recognition utilizing a deep convolutional network trained with triplet loss function, setting a new record accuracy of 99.63\%~\cite{schroff2015facenet}. In this prospectus, we propose to apply this method to the entity resolution problem, in hope to improve both accuracy and efficiency.
+In recent years, researchers have made significant progress in face recognition utilizing a deep convolutional network trained with triplet loss function, setting a new record accuracy of 99.63\% on the widely used Labeled Faces in the Wild (LFW) dataset with more than 13,000 face images~\cite{schroff2015facenet}. In this prospectus, we propose to apply this method to the entity resolution problem, aiming to build a model that is both accurate and robust as the level of complexity and amount of noise grow in a given dataset.
 
 This problem is relevant because improving accuracy on entity resolution would greatly improve the overall performance of a data integration task, which is one of the key topics in this course.
 
@@ -39,7 +39,7 @@ The above loss function has proven successful for face recognition, and we belie
 
 \section{(Best Case) Impact}
 
-We can show that the algorithm produces better results than the state-of-the-art approach and scales well to larger datasets.
+We can show that the algorithm produces more accurate results than state-of-the-art ML and crowd approaches, and also exceeds our direct competitor the deepER algorithm, which on average have a 0.6 to 0.8 F-measure on challenging and noisy datasets~\cite{ebraheem2017deeper}. In addition, our model should also preserve fast runtime and does not require prohibitive amounts of training data. 
 
 \section{Milestones}
 
@@ -99,7 +99,7 @@ Minor obstacles are situations that would delay the project or increase the over
 In other words, what is the minimum finding that would make this project a success and publishable?}
 \end{quote}
 
-Due to novelty of the idea, whether or not this neural network model can outperform current benchmarks, it is worthwhile to explore and potentially provide reference to future research in the similar direction.
+Developing a model that can exceed the entity resolution accuracy set by state-of-the-art machine learning and crowd approaches would make this project a success and publishable, particularly if our model shows high accuracy when a training dataset is high in noise and have unstructured attributes.
 
 \bibliographystyle{ieeetr}
 \bibliography{prospectus}
