add initial lstm experiment

--- a/scripts/create-embedding-data.ipynb
+++ b/scripts/create-embedding-data.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-25T00:06:59.353019Z",
-     "start_time": "2018-02-25T00:06:59.347067Z"
+     "end_time": "2018-03-03T22:54:05.278909Z",
+     "start_time": "2018-03-03T22:54:05.261094Z"
     }
    },
    "outputs": [
@@ -14,18 +14,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../create-embedding-data.py\n"
+      "Overwriting create-embedding-data.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile ../create-embedding-data.py\n",
+    "%%writefile create-embedding-data.py\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle as pkl\n",
     "import argparse as ap\n",
+    "\n",
     "from gensim.models import KeyedVectors\n",
+    "from collections import defaultdict\n",
     "\n",
     "# parse command-line arguments\n",
     "parser = ap.ArgumentParser()\n",
@@ -72,8 +74,12 @@
     "# create and save two maps of corpus vocabulary\n",
     "print('creating maps')\n",
     "vocab = ['<unk>'] + list(model.vocab.keys())\n",
-    "word2idx = dict(zip(vocab, range(len(vocab))))\n",
+    "word2idx = defaultdict(int, zip(vocab, range(len(vocab))))\n",
     "idx2word = dict(zip(range(len(vocab)), vocab))\n",
+    "\n",
+    "# manually encode NaN's as unknown\n",
+    "for nan in ['NaN', 'NAN', 'nan', 'Nan']:\n",
+    "    word2idx[nan] = 0\n",
     "\n",
     "map = dict()\n",
     "map['word2idx'] = word2idx\n",
